# ErenshorLLM

./: .gitignore  LICENSE  README.md  deploy.sh
sidecar/: .gitignore  Cargo.toml  build.sh  erenshor-llm.toml  mingw-gcc-wrapper.sh  mingw-gxx-wrapper.sh  mingw-posix-toolchain.cmake
sidecar/.cargo/: config.toml
sidecar/data/: extract_templates.py  grounding.json
sidecar/data/personalities/: _default.json  _full_personality_dump.json  aethaya.json  aiyamon.json  amara.json  aria.json  ariadne.json  aric.json  arty.json  astra.json  astraea.json  astrid.json  athena.json  axle.json  azzian.json  baetil.json  bearz.json  behox.json  bjorn.json  blademann.json  blake.json  blanche.json  blizzah.json  brock.json  calista.json  cedric.json  celestia.json  celestine.json  cerys.json  cillian.json  clawsout.json  cpaul.json  cyndara.json  cyrus.json  dagler.json  daie.json  dancer.json  darian.json  delrathi.json  devlin.json  (+123 more)
sidecar/data/templates/: catchall.json  combat.json  emotional.json  farewells.json  greetings.json  group_party.json  humor_banter.json  inquiry.json  item_loot.json  lore_knowledge.json  zone_commentary.json
sidecar/scripts/: curate-training-data.py  generate-training-data.sh  merge-personalities.py
sidecar/src/: config.rs  error.rs  main.rs  server.rs  state.rs
sidecar/src/builder/: index_builder.rs  item_cleaner.rs  mod.rs  personality_builder.rs  tavern_exporter.rs  template_builder.rs  template_validator.rs  training_exporter.rs  wiki_importer.rs  wiki_parser.rs
sidecar/src/intelligence/: embedder.rs  enricher.rs  lore.rs  memory.rs  mod.rs  multi_search.rs  personality_store.rs  ranker.rs  sona_integration.rs  template_learning.rs  templates.rs  (+1 more)
(+3010 files in other folders)
